<resources>
    <string name="app_name">AkunaMatata</string>
    <string name="preference_file_key">by.raf.akunamatata</string>
    <string name="title_text">Авторизация Google</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_anonymously">Login Anonymously</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">%s</string>
    <string name="sign_in_email_pass">Войти с помощью Email и пароля</string>
    <string name="signed_in">Войти</string>
    <string name="signing_in">Выполняется вход…</string>
    <string name="signed_out">Для продолжения выполните вход</string>
    <string name="start_akuna">Продолжить</string>
    <string name="signed_in_err">"Ошибка авторизации."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Загрузка…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Выйти</string>
    <string name="disconnect">Отключиться</string>
    <string name="refresh_token">Обновить токен</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">Авторизация</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- DataProvider Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">896228080401-ip0rnvgvd7nq8168hbthe7shv663ve79.apps.googleusercontent.com</string>
    <string name="server_client_secret">WDVSb20xdBvtpBfjLvvy5qqE</string>
    <string name="menu_sign_in">Авторизация</string>
    <string name="menu_sign_out">Выйти</string>
    <string name="menu_offline">offline</string>
    <string name="button_will_be">Я пойду!</string>
    <string name="button_will_not_be">Не пойду(((</string>
    <string name="continue_without_sign">Продолжить не авторизованным</string>

    <string name="google_status_fmt">User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="button_request">Как вы там?</string>
    <string name="button_watch_photos">смотреть фото</string>
    <string name="button_add_photo">добавить фото</string>
    <string name="download_completed">Загрузка завершена</string>
    <string name="header">Header</string>
    <string name="menu_header_title">Hakuna Matata</string>
    <string name="menu_bottom_title">Нижнее меню</string>
    <string name="menu_group_categories">Категории</string>
    <string name="action_search">Поиск</string>
    <string name="search_title">Поиск</string>
    <string name="no_internet">Нет интерета</string>
    <string name="error_uploading">Ошибка загрузки</string>
    <string name="permission_storage">storage_permission</string>
    <string name="tamam">tamam</string>
    <string name="zero">0</string>
    <string name="text_will_be">Пойдет %1$s чел.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Войти</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="verify_email">Проверить email</string>
    <string name="error_camera">ошибка при загрузке фото</string>
    <string name="uploading">Загрузка</string>
    <string name="progress_uploading">загружаю</string>
    <string name="success_uploading">Загрузка завершена</string>
    <string name="auth_with_firebase">Авторизация</string>
    <string name="auth_failed">Ошибка авторизации</string>
    <string name="google_service_connect_failed">Ошибка Google Play Services</string>
</resources>
