<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
<android.support.v7.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:layout_marginRight="4dp"
    android:layout_marginLeft="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="4dp"

    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/event_image"
                    android:paddingTop="5dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:id="@+id/event_author"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/event_image"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/event_author"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/text_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/zero"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event_title"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/event_detail_text"
                    android:layout_below="@+id/event_title"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>

                <by.raf.akunamatata.myviews.IWill
                    android:id="@+id/button_will_be"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/button_will_be"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
</FrameLayout>